bye $gu-sans-web

--- a/assets/components/directDebit/directDebitForm/directDebitForm.scss
+++ b/assets/components/directDebit/directDebitForm/directDebitForm.scss
@@ -47,7 +47,7 @@
 
 .component-direct-debit-form__sort-code-field {
   text-align: center;
-  font-family: $gu-sans-web;
+  font-family: $gu-text-sans-web;
   font-size: 14px;
   background-color: white;
   color: gu-colour(garnett-neutral-1);
@@ -71,7 +71,7 @@
 }
 
 .component-direct-debit-form__text-field {
-  font-family: $gu-sans-web;
+  font-family: $gu-text-sans-web;
   font-size: 14px;
   font-weight: bold;
   background-color: white;
@@ -90,7 +90,7 @@
 }
 
 .component-direct-debit-form__confirmation-text {
-  font-family: $gu-sans-web;
+  font-family: $gu-text-sans-web;
   font-size: 14px;
   color: gu-colour(neutral-1);
   padding-left: 33px;
