--- a/assets/components/displayName/displayName.scss
+++ b/assets/components/displayName/displayName.scss
@@ -2,7 +2,7 @@
 	margin-bottom: $gu-v-spacing;
 
 	.component-display-name__name {
-		font-family: $gu-sans-web;
+		font-family: $gu-text-sans-web;
 		display: inline-block;
 		vertical-align: middle;
 		margin-left: $gu-h-spacing / 2;
