--- a/assets/components/errorMessage/errorMessage.scss
+++ b/assets/components/errorMessage/errorMessage.scss
@@ -6,7 +6,7 @@
   padding: 0 $gu-h-spacing;
   color: #fff;
   background-color: gu-colour(error);
-  font-family: $gu-sans-web;
+  font-family: $gu-text-sans-web;
   font-size: 14px;
   font-weight: 400;
   text-align: left;
