--- a/assets/components/generalErrorMessage/generalErrorMessage.scss
+++ b/assets/components/generalErrorMessage/generalErrorMessage.scss
@@ -53,7 +53,7 @@
 .component-general-error-message__error-heading {
   vertical-align: bottom;
   display: inline-block;
-  font-family: $gu-sans-web;
+  font-family: $gu-text-sans-web;
   font-size: 16px;
   font-weight: 600;
 }
