--- a/assets/components/selectInput/selectInput.scss
+++ b/assets/components/selectInput/selectInput.scss
@@ -5,7 +5,7 @@
 }
 
 .component-select-input__select {
-	font-family: $gu-sans-web;
+	font-family: $gu-text-sans-web;
 	font-size: 14px;
 	color: gu-colour(neutral-1);
 	border: none;
