--- a/assets/components/yourContribution/yourContribution.scss
+++ b/assets/components/yourContribution/yourContribution.scss
@@ -21,7 +21,7 @@
   }
 
   .component-payment-amount {
-    font-family: $gu-sans-web;
+    font-family: $gu-text-sans-web;
   }
 
   .component-secure {
