--- a/assets/pages/regular-contributions/regularContributions.scss
+++ b/assets/pages/regular-contributions/regularContributions.scss
@@ -172,5 +172,5 @@
 .regular-contribution-payment__or-label {
   font-size: 12px;
   margin-bottom: 4px;
-  font-family: $gu-sans-web;
+  font-family: $gu-text-sans-web;
 }
