--- a/assets/components/paymentButtons/directDebitPopUpButton/directDebitPopUpButton.scss
+++ b/assets/components/paymentButtons/directDebitPopUpButton/directDebitPopUpButton.scss
@@ -5,7 +5,7 @@
   color: #fff;
   cursor: pointer;
   display: block;
-  font-family: $gu-sans-web;
+  font-family: $gu-text-sans-web;
   font-size: 16px;
   height: $cta-height;
   padding-left: $gu-h-spacing;
