--- a/assets/pages/oneoff-contributions/oneoffContributions.scss
+++ b/assets/pages/oneoff-contributions/oneoffContributions.scss
@@ -102,5 +102,5 @@
 .oneoff-contribution-payment__or-label {
   font-size: 12px;
   margin-bottom: 4px;
-  font-family: $gu-sans-web;
+  font-family: $gu-text-sans-web;
 }
