Remove identity country from digital pack checkout

--- a/app/views/digitalSubscription.scala.html
+++ b/app/views/digitalSubscription.scala.html
@@ -24,8 +24,7 @@
       window.guardian.user = {
         firstName: "@user.privateFields.map(_.firstName).getOrElse("")",
         lastName: "@user.privateFields.map(_.secondName).getOrElse("")",
-        email: "@user.primaryEmailAddress",
-        country: "@user.privateFields.map(_.country).getOrElse("")"
+        email: "@user.primaryEmailAddress"
       };
 
 
