--- a/app/views/test.scala.html
+++ b/app/views/test.scala.html
@@ -301,7 +301,7 @@
 
       .component-direct-debit-form__sort-code-field {
         text-align: center;
-        font-family: Guardian Sans Web, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
+        font-family: Guardian Text Sans Web, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
         font-size: .875rem;
         background-color: #fff;
         color: #121212;
@@ -331,7 +331,7 @@
       }
 
       .component-direct-debit-form__text-field {
-        font-family: Guardian Sans Web, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
+        font-family: Guardian Text Sans Web, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
         font-size: .875rem;
         font-weight: 700;
         background-color: #fff;
@@ -356,7 +356,7 @@
       }
 
       .component-direct-debit-form__confirmation-text {
-        font-family: Guardian Sans Web, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
+        font-family: Guardian Text Sans Web, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
         font-size: .875rem;
         color: #333;
         padding-left: 2.0625rem;
@@ -586,7 +586,7 @@
         padding: 0 1.25rem;
         color: #fff;
         background-color: #d61d00;
-        font-family: Guardian Sans Web, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
+        font-family: Guardian Text Sans Web, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
         font-size: .875rem;
         font-weight: 400;
         text-align: left;
@@ -743,7 +743,7 @@
       .component-general-error-message__error-heading {
         vertical-align: bottom;
         display: inline-block;
-        font-family: Guardian Sans Web, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
+        font-family: Guardian Text Sans Web, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
         font-size: 1rem;
         font-weight: 600
       }
@@ -962,110 +962,86 @@
 
       @@font-face {
         font-family: Guardian Text Egyptian Web;
-        src: url(//pasteup.guim.co.uk/fonts/1.0.0/hinting-off/kerning-on/original/GuardianTextEgyptianWeb/GuardianTextEgyptianWeb-Regular.woff2) format("woff2"), url(//pasteup.guim.co.uk/fonts/1.0.0/hinting-off/kerning-on/original/GuardianTextEgyptianWeb/GuardianTextEgyptianWeb-Regular.woff) format("woff");
-        font-weight: 400;
-        font-style: normal;
-        font-stretch: normal;
-        font-display: fallback
+        src: url(//pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GuardianTextEgyptian-Regular.woff2) format("woff2"),url(//pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GuardianTextEgyptian-Regular.woff) format("woff"),url(//pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GuardianTextEgyptian-Regular.ttf) format("ttf");
+        font-weight: 400
       }
 
       @@font-face {
         font-family: Guardian Text Egyptian Web;
-        src: url(//pasteup.guim.co.uk/fonts/1.0.0/hinting-off/kerning-on/original/GuardianTextEgyptianWeb/GuardianTextEgyptianWeb-RegularItalic.woff2) format("woff2"), url(//pasteup.guim.co.uk/fonts/1.0.0/hinting-off/kerning-on/original/GuardianTextEgyptianWeb/GuardianTextEgyptianWeb-RegularItalic.woff) format("woff");
+        src: url(//pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GuardianTextEgyptian-RegularItalic.woff2) format("woff2"),url(//pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GuardianTextEgyptian-RegularItalic.woff) format("woff"),url(//pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GuardianTextEgyptian-RegularItalic.ttf) format("ttf");
         font-weight: 400;
-        font-style: italic;
-        font-stretch: normal;
-        font-display: fallback
+        font-style: italic
       }
 
       @@font-face {
         font-family: Guardian Text Egyptian Web;
-        src: url(//pasteup.guim.co.uk/fonts/1.0.0/hinting-off/kerning-on/original/GuardianTextEgyptianWeb/GuardianTextEgyptianWeb-Medium.woff2) format("woff2"), url(//pasteup.guim.co.uk/fonts/1.0.0/hinting-off/kerning-on/original/GuardianTextEgyptianWeb/GuardianTextEgyptianWeb-Medium.woff) format("woff");
-        font-weight: 700;
-        font-style: normal;
-        font-stretch: normal;
-        font-display: fallback
-      }
-
-      @@font-face {
-        font-family: Guardian Text Sans Web;
-        src: url(//pasteup.guim.co.uk/fonts/1.0.0/hinting-off/kerning-on/original/GuardianTextSansWeb/GuardianTextSansWeb-Regular.woff2) format("woff2"), url(//pasteup.guim.co.uk/fonts/1.0.0/hinting-off/kerning-on/original/GuardianTextSansWeb/GuardianTextSansWeb-Regular.woff) format("woff");
-        font-weight: 400;
-        font-style: normal;
-        font-stretch: normal;
-        font-display: fallback
-      }
-
-      @@font-face {
-        font-family: Guardian Text Sans Web;
-        src: url(//pasteup.guim.co.uk/fonts/1.0.0/hinting-off/kerning-on/original/GuardianTextSansWeb/GuardianTextSansWeb-RegularItalic.woff2) format("woff2"), url(//pasteup.guim.co.uk/fonts/1.0.0/hinting-off/kerning-on/original/GuardianTextSansWeb/GuardianTextSansWeb-RegularItalic.woff) format("woff");
-        font-weight: 400;
-        font-style: italic;
-        font-stretch: normal;
-        font-display: fallback
-      }
-
-      @@font-face {
-        font-family: Guardian Text Sans Web;
-        src: url(//pasteup.guim.co.uk/fonts/1.0.0/hinting-off/kerning-on/original/GuardianTextSansWeb/GuardianTextSansWeb-Medium.woff2) format("woff2"), url(//pasteup.guim.co.uk/fonts/1.0.0/hinting-off/kerning-on/original/GuardianTextSansWeb/GuardianTextSansWeb-Medium.woff) format("woff");
-        font-weight: 700;
-        font-style: normal;
-        font-stretch: normal;
-        font-display: fallback
-      }
-
-      @@font-face {
-        font-family: Guardian Sans Web;
-        src: url(//pasteup.guim.co.uk/fonts/1.0.0/hinting-off/kerning-on/original/GuardianSansWeb/GuardianSansWeb-Regular.woff2) format("woff2"), url(//pasteup.guim.co.uk/fonts/1.0.0/hinting-off/kerning-on/original/GuardianSansWeb/GuardianSansWeb-Regular.woff) format("woff");
-        font-weight: 400;
-        font-style: normal;
-        font-stretch: normal;
-        font-display: fallback
+        src: url(//pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GuardianTextEgyptian-Medium.woff2) format("woff2"),url(//pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GuardianTextEgyptian-Medium.woff) format("woff"),url(//pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GuardianTextEgyptian-Medium.ttf) format("ttf");
+        font-weight: 600
       }
 
       @@font-face {
         font-family: Guardian Headline;
-        src: url(/assets/fonts/GHGuardianHeadline-Light.woff2) format("woff2"), url(/assets/fonts/GHGuardianHeadline-Light.woff) format("woff"), url(/assets/fonts/GHGuardianHeadline-Light.ttf) format("ttf");
+        src: url(//pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GHGuardianHeadline-Light.woff2) format("woff2"),url(//pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GHGuardianHeadline-Light.woff) format("woff"),url(//pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GHGuardianHeadline-Light.ttf) format("ttf");
         font-weight: 200
       }
 
       @@font-face {
         font-family: Guardian Headline;
-        src: url(/assets/fonts/GHGuardianHeadline-LightItalic.woff2) format("woff2"), url(/assets/fonts/GHGuardianHeadline-LightItalic.woff) format("woff"), url(/assets/fonts/GHGuardianHeadline-LightItalic.ttf) format("ttf");
+        src: url(//pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GHGuardianHeadline-LightItalic.woff2) format("woff2"),url(//pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GHGuardianHeadline-LightItalic.woff) format("woff"),url(//pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GHGuardianHeadline-LightItalic.ttf) format("ttf");
         font-weight: 200;
         font-style: italic
       }
 
       @@font-face {
         font-family: Guardian Headline;
-        src: url(/assets/fonts/GHGuardianHeadline-Regular.woff2) format("woff2"), url(/assets/fonts/GHGuardianHeadline-Regular.woff) format("woff"), url(/assets/fonts/GHGuardianHeadline-Regular.ttf) format("ttf");
+        src: url(//pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GHGuardianHeadline-Regular.woff2) format("woff2"),url(//pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GHGuardianHeadline-Regular.woff) format("woff"),url(//pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GHGuardianHeadline-Regular.ttf) format("ttf");
         font-weight: 400
       }
 
       @@font-face {
         font-family: Guardian Headline;
-        src: url(/assets/fonts/GHGuardianHeadline-RegularItalic.woff2) format("woff2"), url(/assets/fonts/GHGuardianHeadline-RegularItalic.woff) format("woff"), url(/assets/fonts/GHGuardianHeadline-RegularItalic.ttf) format("ttf");
+        src: url(//pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GHGuardianHeadline-RegularItalic.woff2) format("woff2"),url(//pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GHGuardianHeadline-RegularItalic.woff) format("woff"),url(//pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GHGuardianHeadline-RegularItalic.ttf) format("ttf");
         font-weight: 400;
         font-style: italic
       }
 
       @@font-face {
         font-family: Guardian Headline;
-        src: url(/assets/fonts/GHGuardianHeadline-Semibold.woff2) format("woff2"), url(/assets/fonts/GHGuardianHeadline-Semibold.woff) format("woff"), url(/assets/fonts/GHGuardianHeadline-Semibold.ttf) format("ttf");
+        src: url(//pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GHGuardianHeadline-Semibold.woff2) format("woff2"),url(//pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GHGuardianHeadline-Semibold.woff) format("woff"),url(//pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GHGuardianHeadline-Semibold.ttf) format("ttf");
         font-weight: 500
       }
 
       @@font-face {
         font-family: Guardian Headline;
-        src: url(/assets/fonts/GHGuardianHeadline-Bold.woff2) format("woff2"), url(/assets/fonts/GHGuardianHeadline-Bold.woff) format("woff"), url(/assets/fonts/GHGuardianHeadline-Bold.ttf) format("ttf");
+        src: url(//pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GHGuardianHeadline-Bold.woff2) format("woff2"),url(//pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GHGuardianHeadline-Bold.woff) format("woff"),url(//pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GHGuardianHeadline-Bold.ttf) format("ttf");
         font-weight: 900
       }
 
       @@font-face {
-        font-family: GT Guardian Titlepiece;
-        src: url(/assets/fonts/GTGuardianTitlepiece-Bold.woff2) format("woff2"), url(/assets/fonts/GTGuardianTitlepiece-Bold.woff) format("woff");
+        font-family: Guardian Text Sans Web;
+        src: url(//pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GuardianTextSans-Regular.woff2) format("woff2"),url(//pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GuardianTextSans-Regular.woff) format("woff"),url(//pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GuardianTextSans-Regular.ttf) format("ttf");
         font-weight: 400
       }
+
+      @@font-face {
+        font-family: Guardian Text Sans Web;
+        src: url(//pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GuardianTextSans-RegularItalic.woff2) format("woff2"),url(//pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GuardianTextSans-RegularItalic.woff) format("woff"),url(//pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GuardianTextSans-RegularItalic.ttf) format("ttf");
+        font-weight: 400;
+        font-style: italic
+      }
+
+      @@font-face {
+        font-family: Guardian Text Sans Web;
+        src: url(//pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GuardianTextSans-Medium.woff2) format("woff2"),url(//pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GuardianTextSans-Medium.woff) format("woff"),url(//pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GuardianTextSans-Medium.ttf) format("ttf");
+        font-weight: 600
+      }
+
+      @@font-face {
+        font-family: GT Guardian Titlepiece;
+        src: url(//pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GTGuardianTitlepiece-Bold.woff2) format("woff2"),url(//pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GTGuardianTitlepiece-Bold.woff) format("woff"),url(//pasteup.guim.co.uk/webfonts/1.0.0/noalts-not-hinted/GTGuardianTitlepiece-Bold.ttf) format("ttf");
+        font-weight: 400
+      }
+
 
       html {
         font-family: Guardian Text Egyptian Web, Georgia, serif;
@@ -2175,10 +2151,6 @@
     <link rel="apple-touch-icon" sizes="114x114" href="@assets("images/favicons/114x114.png")">
     <link rel="apple-touch-icon" sizes="72x72" href="@assets("images/favicons/72x72.png")">
     <link rel="apple-touch-icon-precomposed" href="@assets("images/favicons/57x57.png")">
-
-    <link rel="preload" href="//pasteup.guim.co.uk/fonts/1.0.0/hinting-off/kerning-on/original/GuardianTextSansWeb/GuardianTextSansWeb-Regular.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="preload" href="//pasteup.guim.co.uk/fonts/1.0.0/hinting-off/kerning-on/original/GuardianTextSansWeb/GuardianTextSansWeb-Medium.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="preload" href="/assets/fonts/GHGuardianHeadline-Bold.woff2" as="font" type="font/woff2" crossorigin>
 
     <script type="application/ld+json">
 		{
