Swap px font sizes for ems

--- a/assets/pages/paper-subscription-landing/components/hero/joyOfPrint.scss
+++ b/assets/pages/paper-subscription-landing/components/hero/joyOfPrint.scss
@@ -93,7 +93,7 @@
   border-radius: 50%;
   line-height: 1;
   font-family: $gu-headline;
-  font-size: 13px;
+  font-size: 0.813rem;
   font-weight: 700;
   width: 8.6rem;
   height: 8.6rem;
@@ -124,7 +124,7 @@
     top: 2.4rem;
     width: 9.5rem;
     height: 9.5rem;
-    font-size: 14px;
+    font-size: 0.875rem;
 
     span:nth-child(2) {
       font-size: 3.8rem;
