--- a/support-frontend/app/views/eventsRouter.scala.html
+++ b/support-frontend/app/views/eventsRouter.scala.html
@@ -3,7 +3,10 @@
 @import views.EmptyDiv
 @import assets.RefPath
 @import assets.StyleContent
-@()(implicit assets: AssetsResolver, request: RequestHeader, settings: AllSettings)
+@import com.gu.identity.model.User
+@(
+  user: Option[User]
+)(implicit assets: AssetsResolver, request: RequestHeader, settings: AllSettings)
 
 @main(
   title = "Support the Guardian | Events",
@@ -18,5 +21,5 @@
   shareUrl = None,
   noindex = true
 ){
-
+  @windowGuardianUser(user)
 }
