refactor: move productPrices to it's own object

--- a/support-frontend/app/views/contributions.scala.html
+++ b/support-frontend/app/views/contributions.scala.html
@@ -64,6 +64,7 @@
     window.guardian.productPrices = @Html(outputJson(landingPageProductPrices.supporterPlusProductPrices))
     window.guardian.supporterPlusProductPrices = @Html(outputJson(landingPageProductPrices.supporterPlusProductPrices))
     window.guardian.tierThreeProductPrices = @Html(outputJson(landingPageProductPrices.tierThreeProductPrices))
+    window.guardian.allProductPrices = @Html(outputJson(landingPageProductPrices))
   </script>
 
   @windowGuardianPaymentConfig(
