--- a/support-frontend/app/views/router.scala.html
+++ b/support-frontend/app/views/router.scala.html
@@ -1,14 +1,10 @@
 @import admin.ServersideAbTest.Participation
-@import assets.StyleContent
 @import assets.RefPath
 @import assets.AssetsResolver
 @import admin.settings.AllSettings
-@import views.EmptyDiv
 @import io.circe.JsonObject
 
 @import com.gu.identity.model.User
-@import com.gu.support.encoding.CustomCodecs._
-@import services.pricing.ProductPrices
 @import views.ViewHelpers.outputJson
 @(
   geoData: GeoData,
@@ -19,7 +15,7 @@
   membersDataApiUrl: String,
   guestAccountCreationToken: Option[String],
   v2recaptchaConfigPublicKey: String,
-  productPrices: ProductPrices,
+  landingPageProductPrices: LandingPageProductPrices,
   productCatalog: JsonObject,
   user: Option[User]
 )(implicit assets: AssetsResolver, request: RequestHeader, settings: AllSettings)
@@ -40,7 +36,7 @@
 ){
   <script type="text/javascript">
     window.guardian = window.guardian || {};
-    window.guardian.productPrices = @Html(outputJson(productPrices))
+    window.guardian.allProductPrices = @Html(outputJson(landingPageProductPrices))
   </script>
 
   @windowGuardianPaymentConfig(
