refactor: bring SSR content rendering into one script

--- a/support-frontend/app/views/newspaperArchive.scala.html
+++ b/support-frontend/app/views/newspaperArchive.scala.html
@@ -1,7 +1,4 @@
-@import views.{EmptyDiv, ReactDiv, SSRContent}
-
 @(
-  title: String,
   html: Html,
 )()
 
@@ -13,7 +10,7 @@
 
     <meta name="robots" content="noindex">
 
-    <title>@title</title>
+    <title>Newspaper Archive</title>
 
   </head>
   <body class="header-tweaks">
