Migrate dropdownArrowUp to a React component

--- a/support-frontend/assets/components/subscriptionCheckouts/summary.module.scss
+++ b/support-frontend/assets/components/subscriptionCheckouts/summary.module.scss
@@ -204,13 +204,23 @@
 }
 
 .defaultState {
+  display: inline-block;
 	transition: transform 300ms;
 	transform-origin: center;
 	transform: rotate(180deg);
+
+  svg {
+    display: block;
+  }
 }
 
 .openState {
+  display: inline-block;
 	transform: rotate(0);
+
+  svg {
+    display: block;
+  }
 }
 
 .promo {
