Remove Amazon pay as a payment method from the server

--- a/support-frontend/app/views/windowGuardianPaymentConfig.scala.html
+++ b/support-frontend/app/views/windowGuardianPaymentConfig.scala.html
@@ -64,13 +64,13 @@
   };
 
   window.guardian.amazonPaySellerId = {
-    default: "@paymentMethodConfigs.defaultAmazonPayConfig.sellerId",
-    test: "@paymentMethodConfigs.testAmazonPayConfig.sellerId"
+    default: "", //TODO: Remove when Amazon pay is removed from the client side
+    test: ""
   };
 
   window.guardian.amazonPayClientId = {
-    default: "@paymentMethodConfigs.defaultAmazonPayConfig.clientId",
-    test: "@paymentMethodConfigs.testAmazonPayConfig.clientId",
+    default: "", //TODO: Remove when Amazon pay is removed from the client side
+    test: "",
   };
 
   window.guardian.paymentApiUrl = "@paymentApiUrl";
