preload main js bundle

--- a/support-frontend/app/views/main.scala.html
+++ b/support-frontend/app/views/main.scala.html
@@ -58,6 +58,8 @@
       <meta property="og:url" content="@shareUrl" />
     }
 
+    <link href="@assets(mainJsBundle)" rel="preload" as="script">
+
     @canonicalLink.map { definedCanonicalLink =>
       <link rel="canonical" href="@definedCanonicalLink" />
     }
