--- a/support-frontend/assets/pages/subscriptions-landing/subscriptionsLanding.scss
+++ b/support-frontend/assets/pages/subscriptions-landing/subscriptionsLanding.scss
@@ -164,6 +164,21 @@
 	}
 }
 
+.subscriptions__list {
+  display: block;
+  border-top: 1px solid gu-colour(neutral-86);
+  margin: 45px 20px 25px 0px;
+}
+
+.subscriptions__listitem {
+  display: flex;
+}
+
+.subscriptions__listitem__bullet {
+  vertical-align: top;
+  padding-right: 4px;
+}
+
 .subscriptions__product--reverse {
 	@include mq($until: tablet) {
 		padding-bottom: 30px;
