--- a/support-frontend/assets/pages/subscriptions-landing/subscriptionsLanding.scss
+++ b/support-frontend/assets/pages/subscriptions-landing/subscriptionsLanding.scss
@@ -538,7 +538,7 @@
 	}
 
 	@include mq($from: desktop) {
-		width: 106%;
+		width: 100%;
 		padding-bottom: 20px;
 	}
 
@@ -556,7 +556,8 @@
 	}
 }
 
-.subscriptions__button-container--feature {
+.subscriptions__button-container--feature,
+.subscriptions__button-container--feature--benefits {
 	@include mq($until: phablet) {
 		padding-bottom: 10px;
 	}
@@ -573,7 +574,15 @@
 		}
 
 		@include mq($from: desktop) {
-			margin: 0 0 0 6px;
+			margin: 0 0 0 10px;
+		}
+	}
+}
+
+.subscriptions__button-container--feature--benefits {
+	.component-button {
+		@include mq($from: desktop) {
+			padding: 0 ($gu-cta-height * 0.4);
 		}
 	}
 }
