feat: subscription mobile spacing digital edition

--- a/support-frontend/assets/pages/subscriptions-landing/subscriptionsLanding.scss
+++ b/support-frontend/assets/pages/subscriptions-landing/subscriptionsLanding.scss
@@ -524,7 +524,8 @@
 /****************** subscriptions__product-button ********************/
 
 .subscriptions__button-container,
-.subscriptions__button-container--feature {
+.subscriptions__button-container--feature,
+.subscriptions__button-container--feature--benefits {
 	display: block;
 
 	@include mq($from: phablet) {
