--- a/support-frontend/assets/pages/subscriptions-landing/subscriptionsLanding.scss
+++ b/support-frontend/assets/pages/subscriptions-landing/subscriptionsLanding.scss
@@ -303,22 +303,13 @@
 
 .subscriptions__copy-container.subscriptions__product--feature
 	.subscriptions__product-title {
-	font-size: 37px;
-
+	line-height: 115%;
 	@include mq($until: tablet) {
-		font-size: 34px;
-		line-height: 34px;
-		padding-top: 15px;
-	}
-
-	@include mq($until: mobileLandscape) {
 		font-size: 24px;
-		line-height: 28px;
 	}
-
-	@include mq($until: mobileMedium) {
-		font-size: 22px;
-		line-height: 22px;
+	@include mq($until: desktop) {
+		font-size: 28px;
+		padding-top: 15px;
 	}
 }
 
@@ -374,6 +365,18 @@
 	@include mq($until: mobileLandscape) {
 		font-size: 20px;
 		line-height: 24px;
+	}
+}
+
+.subscriptions__copy-container.subscriptions__product--feature
+	.subscriptions__product-subtitle--large {
+	line-height: 115%;
+	font-size: 24px;
+	@include mq($until: tablet) {
+		font-size: 17px;
+	}
+	@include mq($until: desktop) {
+		font-size: 20px;
 	}
 }
 
