One off Stripe config is unused for Tortoise

--- a/support-frontend/app/views/windowGuardianPaymentConfig.scala.html
+++ b/support-frontend/app/views/windowGuardianPaymentConfig.scala.html
@@ -60,8 +60,8 @@
 
   window.guardian.stripeKeyTortoiseMedia = {
     ONE_OFF: {
-      default: "@paymentMethodConfigs.oneOffDefaultStripeConfig.tortoiseMediaAccount.rawPublicKey",
-      test: "@paymentMethodConfigs.oneOffTestStripeConfig.tortoiseMediaAccount.rawPublicKey"
+      default: "unused", // We will never need one-off payments for Tortoise Media
+      test: "unused"
     },
     REGULAR: {
       default: "@paymentMethodConfigs.regularDefaultStripeConfig.tortoiseMediaAccount.rawPublicKey",
